umbrello/codeimport/csvalaimportbase.cpp : Adopt improvements from javaimport.cpp which happened since 2012.

BUG: 502785
FIXED-IN: 25.07.70